--- a/deploy-to-evennode.yml
+++ b/deploy-to-evennode.yml
@@ -27,6 +27,6 @@ jobs:
       run: |
         git remote add evennode ${{ secrets.git@git.evennode.com:b5c093b70a77ef75927581a96e8e5e80.git
  }}
-        git config --global user.email "${{ secrets.GIT_EMAIL }}"
-        git config --global user.name "${{ secrets.GIT_NAME }}"
+        git config --global user.email "${{ secrets.nillohitsharma136@gmail.com }}"
+        git config --global user.name "${{ secrets.nillohitsharma136 }}"
         git push evennode +master
