--- a/deploy-to-evennode.yml
+++ b/deploy-to-evennode.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Install SSH key
       uses: shimataro/ssh-key-action@v2
       with:
-        key: ${{ secrets.SSH_KEY }}
+        key: ${{ secrets.hello }}
         known_hosts: " "
     - name: git@git.evennode.com:b5c093b70a77ef75927581a96e8e5e80.git
 
